bpo-29849: fix a memory leak in import_from (GH-712)